<resources>
    <string name="app_name">Work is done</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="join_us_text">Join us!</string>
    <string name="auth_failed">Autenticação falhou</string>
    <string name="facebook_app_id">171135990314744</string>
    <string name="fb_login_protocol_scheme">fb171135990314744</string>
    <string name="facebook_login_text">LOGIN</string>
    <string name="facebook_logout_text">LOGOUT</string>
    <string name="task_name">Nome da tarefa:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_instructions_text_en">
        This app will help you develop focus on your day\'s activities, for using it, you should have an introduction to the
        technique chosen here, this one is known by the name of pomodoro technique (tomato in Italian).
        \n\n
        Elaborated in the late 1980s, it is based on the idea that workflows divided into blocks can
        improve brain agility and stimulate focus.\n\n After much research, Cirillo arrived within the 25 minute period
        as being the ideal time for these blocks, also known as “pomodoros”.
        </string>

    <string name="initial_instructions_text_pt">
        Esse aplicativo te auxiliará a desenvolver foco em suas atividades do dia, para usa-lo é bom ter uma introdução da
        técnica aqui escolhida, esta é conhecida pelo nome de técnica do pomodoro (tomate em italiano).
        \n\n
        Elaborada no fim da década de 1980, ela se baseia na ideia de que fluxos de trabalho divididos em blocos podem
        melhorar a agilidade do cérebro e estimular o foco.\n\n Depois de muita pesquisa, Cirillo chegou ao período de 25 minutos
        como sendo o tempo ideal para esses blocos, também conhecidos como “pomodoros”.
        </string>
    <string name="txt_profile_settings">Configurações de perfil</string>
    <string name="txt_change_password">Alterar senha:</string>
    <string name="txt_auto_login">Login automatico</string>
    <string name="txt_user_logout">User logout</string>
    <string name="txt_application_settings">Configurações da aplicação</string>
    <string name="txt_keep_screen_on">Manter tela ligada</string>
    <string name="txt_turn_off_sound">Desligar o som</string>
    <string name="txt_go">GO!</string>
    <string name="txt_clear_list">Clear list</string>
    <string name="txt_want_to_create_a_new_account">Want to create a new account?</string>
    <string name="txt_i_don_t_want_to_register">I don\'t want to register</string>
    <string name="txt_daily_task">Tarefas do dia</string>
    <string name="txt_config">Configurações</string>
    <string name="txt_historic">Histórico</string>
    <string name="txt_register">Register</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_already_a_member_login">Already a member? Login</string>
    <string name="img_description_remove">remove_btn</string>
    <string name="txt_laurem_ipsum_test">Laurem ipsum</string>
    <string name="txt_stop">STOP</string>
    <string name="image_description_pomodor">pomodor image</string>
    <string name="img_description_plus_btn">plus_btn</string>

</resources>
